tests/baselines/reference/staticIndexSignature3.errors.txt
staticIndexSignature3.ts(12,5): error TS2413: 'number' index type '1' is not assignable to 'string' index type 'boolean'.


==== staticIndexSignature3.ts (1 errors) ====
    class B {
        static readonly [s: string]: number;
        static readonly [s: number]: 42 | 233
    }
    
    class D extends B {
        static readonly [s: string]: number
    }
    
    class ED extends D {
        static readonly [s: string]: boolean
        static readonly [s: number]: 1 
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2413: 'number' index type '1' is not assignable to 'string' index type 'boolean'.
    }
    
    class DD extends D {
        static readonly [s: string]: 421
    }
    
    const a = B["f"];
    const b =  B[42];
    const c = D["f"]
    const d = D[42]
    const e = ED["f"]
    const f = ED[42]
    const g = DD["f"]
    const h = DD[42]
    